# ainews_app

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  prd.md  pyproject.toml  requirements.txt  sources.json
.cursor/: mcp.json
.github/workflows/: .pre-commit-config.yaml  ci.yml  manual-newsletter.yml  newsletter.yml
docs/: IMAGE_EMBEDDING_GUIDE.md
drafts/: 2025-06-27_1538_daily_newsletter.md  2025-06-27_1541_daily_newsletter.md  2025-06-27_1608_daily_newsletter.md  2025-06-27_1837_daily_newsletter.md  2025-06-27_2224_daily_newsletter.md  2025-06-27_2239_daily_newsletter.md  2025-06-27_2318_daily_newsletter.md  2025-06-27_2329_daily_newsletter.md  2025-07-06_0028_daily_newsletter.md  2025-07-06_0556_daily_newsletter.md  2025-07-06_1354_daily_newsletter.md  2025-07-06_1533_daily_newsletter.md  2025-07-06_1559_daily_newsletter.md  2025-07-06_1802_daily_newsletter.md  2025-07-06_1844_daily_newsletter.md  index.md
drafts/2025/: 2025-06-27_2355_daily_newsletter.md  2025-06-28_0745_daily_newsletter.md  2025-06-28_0756_daily_newsletter.md  2025-06-28_0802_daily_newsletter.md  2025-06-28_0830_daily_newsletter.md  2025-06-28_0842_daily_newsletter.md  (+36 more)
scripts/: organize_drafts.py  rebuild_faiss_index.py  test_f16_context_analysis.py  test_faiss_basic.py  verify_faiss_functionality.py
sql/: README_migration.md  migration_phase4.sql  phase2_tables.sql
src/: __init__.py
tests/: CITATION_FIXES_REPORT.md  check_supabase_storage.py  create_supabase_bucket_v2.py  fix_newsletter_indents.py  manual_test.py  mock_prd_compliance_report_20250629_154121.txt  prd_compliance_report_20250629_154200.txt  prd_compliance_report_20250629_190527.txt  simple_test.py  simple_test_runner.py  test_ai_filter_fix.py  test_basic.py  test_basic_no_deps.py  test_citation_cleaning.py  test_citation_fix.py  test_config.py  test_constants.py  test_debug.py  test_e2e_image_workflow.py  test_image_fetcher.py  test_image_uploader.py  test_latest_newsletter.py  test_llm_fixes.py  test_newsletter_fix.py  test_newsletter_generation.py  test_newsletter_with_real_images.py  test_phase2.py  test_phase2_simple.py  test_phase3_comprehensive.py  test_prd_compliance.py  test_real_image_processing.py  test_real_newsletter.py  test_simple_upload.py  test_source_quality.py  test_specific_newsletter.py  test_text_processing.py  test_youtube_upload.py
(+160 files in other folders)
